// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly while loading 1`] = `
.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

.emotion-11 {
  width: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-11 tr {
  background-color: #252525;
}

.emotion-11 tr .gear {
  opacity: 0;
}

.emotion-11 tr .gear:focus {
  opacity: 1;
}

.emotion-11 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-11 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-11 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-11 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-11 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-11 tr:hover .gear {
  opacity: 1;
}

.emotion-11 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-11 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-11 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-1 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-1:nth-of-type(2) {
  width: 100%;
}

.emotion-1:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-10 {
  pointer-events: none;
}

.emotion-9 {
  height: 600px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 16px;
  line-height: 20px;
}

<div>
  <h2
    className="emotion-0"
  >
    Job Queue
  </h2>
  <div>
    <table
      className="emotion-11"
    >
      <thead>
        <tr>
          <th
            className="emotion-1"
          >
            Status
          </th>
          <th
            className="emotion-1"
          >
            Job Name
          </th>
          <th
            className="emotion-1"
          >
            Created By
          </th>
          <th
            className="emotion-1"
          >
            Priority
          </th>
          <th
            className="emotion-1"
          >
            Created
          </th>
          <th
            className="emotion-1"
          >
            # Assets
          </th>
          <th
            className="emotion-1"
          >
            Errors
          </th>
          <th
            className="emotion-1"
          >
            Task Progress
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-10"
        >
          <td
            colSpan={8}
          >
            <div
              className="emotion-9"
            >
              Loading...
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
  </div>
</div>
`;

exports[`<Jobs /> should render properly with jobs 1`] = `
.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

.emotion-135 {
  width: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-135 tr {
  background-color: #252525;
}

.emotion-135 tr .gear {
  opacity: 0;
}

.emotion-135 tr .gear:focus {
  opacity: 1;
}

.emotion-135 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-135 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-135 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-135 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-135 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-135 tr:hover .gear {
  opacity: 1;
}

.emotion-135 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-135 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-135 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-1 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-1:nth-of-type(2) {
  width: 100%;
}

.emotion-1:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #c92300;
  background-color: #191919;
}

.emotion-10 {
  text-align: center;
}

.emotion-12 {
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 32px;
  height: 32px;
  padding: 8px;
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
  border-radius: 32px;
  color: #c92300;
  background-color: #191919;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-13 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-13:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-13:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-14 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4ac565;
}

.emotion-14:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-14:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-15 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #ebb52e;
}

.emotion-15:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-15:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-16 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4a90e2;
}

.emotion-16:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-16:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-19 {
  width: 8px;
}

.emotion-21 {
  position: relative;
}

.emotion-20 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 14px;
  line-height: 16px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  border-radius: 32px;
}

.emotion-20:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-20:hover {
  background-color: #808080;
}

.emotion-23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #ebb52e;
  background-color: #191919;
}

.emotion-30 {
  height: 100%;
  -webkit-flex: 14 0 auto;
  -ms-flex: 14 0 auto;
  flex: 14 0 auto;
  background-color: #4a90e2;
}

.emotion-30:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-30:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #4ac565;
  background-color: #191919;
}

.emotion-42 {
  height: 100%;
  -webkit-flex: 8 0 auto;
  -ms-flex: 8 0 auto;
  flex: 8 0 auto;
  background-color: #4ac565;
}

.emotion-42:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-42:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-43 {
  height: 100%;
  -webkit-flex: 4 0 auto;
  -ms-flex: 4 0 auto;
  flex: 4 0 auto;
  background-color: #4a90e2;
}

.emotion-43:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-43:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-86 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #4ac565;
}

.emotion-86:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-86:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div>
  <h2
    className="emotion-0"
  >
    Job Queue
  </h2>
  <div>
    <table
      className="emotion-135"
    >
      <thead>
        <tr>
          <th
            className="emotion-1"
          >
            Status
          </th>
          <th
            className="emotion-1"
          >
            Job Name
          </th>
          <th
            className="emotion-1"
          >
            Created By
          </th>
          <th
            className="emotion-1"
          >
            Priority
          </th>
          <th
            className="emotion-1"
          >
            Created
          </th>
          <th
            className="emotion-1"
          >
            # Assets
          </th>
          <th
            className="emotion-1"
          >
            Errors
          </th>
          <th
            className="emotion-1"
          >
            Task Progress
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              className="emotion-9"
            >
              Cancelled
            </div>
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-11-07 01:38:36
          </td>
          <td
            className="emotion-10"
          >
            4
          </td>
          <td>
            <div
              className="emotion-12"
            >
              4
            </div>
          </td>
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-13"
                  />
                  <div
                    className="emotion-14"
                  />
                  <div
                    className="emotion-15"
                  />
                  <div
                    className="emotion-16"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-23"
            >
              In Progress
            </div>
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-11-07 01:38:36
          </td>
          <td
            className="emotion-10"
          >
            40
          </td>
          <td>
            <div
              className="emotion-12"
            >
              40
            </div>
          </td>
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-13"
                  />
                  <div
                    className="emotion-14"
                  />
                  <div
                    className="emotion-15"
                  />
                  <div
                    className="emotion-30"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-37"
            >
              Archived
            </div>
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-11-07 01:36:29
          </td>
          <td
            className="emotion-10"
          >
            400
          </td>
          <td>
            <div
              className="emotion-12"
            >
              400
            </div>
          </td>
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-13"
                  />
                  <div
                    className="emotion-42"
                  />
                  <div
                    className="emotion-43"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-9"
            >
              Cancelled
            </div>
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-11-07 01:35:36
          </td>
          <td
            className="emotion-10"
          >
            4000
          </td>
          <td>
            <div
              className="emotion-12"
            >
              4000
            </div>
          </td>
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-13"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-37"
            >
              Finished
            </div>
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-10-11 21:11:03
          </td>
          <td
            className="emotion-10"
          >
            40000
          </td>
          <td>
            <div
              className="emotion-12"
            >
              40000
            </div>
          </td>
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-13"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-23"
            >
              Active
            </div>
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-10-11 21:03:27
          </td>
          <td
            className="emotion-10"
          >
            400000
          </td>
          <td>
            <div
              className="emotion-12"
            >
              400000
            </div>
          </td>
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-13"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-23"
            >
              Active
            </div>
          </td>
          <td>
            flipbook_export_1
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-10"
          >
            1
          </td>
          <td>
            2019-08-01 22:52:19
          </td>
          <td
            className="emotion-10"
          >
            0
          </td>
          <td />
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-86"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-23"
            >
              Active
            </div>
          </td>
          <td>
            export_7_8_2019
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-10"
          >
            1
          </td>
          <td>
            2019-07-08 18:53:44
          </td>
          <td
            className="emotion-10"
          >
            0
          </td>
          <td />
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-13"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-23"
            >
              Active
            </div>
          </td>
          <td>
            export_7_8_2019___
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-10"
          >
            1
          </td>
          <td>
            2019-07-08 18:43:03
          </td>
          <td
            className="emotion-10"
          >
            0
          </td>
          <td />
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-13"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-23"
            >
              Active
            </div>
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-07-03 16:49:15
          </td>
          <td
            className="emotion-10"
          >
            0
          </td>
          <td />
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-13"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-23"
            >
              Active
            </div>
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-07-03 01:29:41
          </td>
          <td
            className="emotion-10"
          >
            49
          </td>
          <td>
            <div
              className="emotion-12"
            >
              49
            </div>
          </td>
          <td>
            <div
              className="emotion-22"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-18"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-17"
                >
                  <div
                    className="emotion-13"
                  />
                  <div
                    className="emotion-86"
                  />
                </div>
              </div>
              <div
                className="emotion-19"
              />
              <div
                className="emotion-21"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-20"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <Pagination
      currentPage={1}
      totalPages={1}
    />
  </div>
</div>
`;

exports[`<Jobs /> should render properly with no jobs 1`] = `
.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

.emotion-12 {
  width: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-12 tr {
  background-color: #252525;
}

.emotion-12 tr .gear {
  opacity: 0;
}

.emotion-12 tr .gear:focus {
  opacity: 1;
}

.emotion-12 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-12 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-12 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-12 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-12 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-12 tr:hover .gear {
  opacity: 1;
}

.emotion-12 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-12 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-12 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-1 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-1:nth-of-type(2) {
  width: 100%;
}

.emotion-1:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-11 {
  pointer-events: none;
}

.emotion-10 {
  height: 600px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 16px;
  line-height: 20px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <h2
    className="emotion-0"
  >
    Job Queue
  </h2>
  <div>
    <table
      className="emotion-12"
    >
      <thead>
        <tr>
          <th
            className="emotion-1"
          >
            Status
          </th>
          <th
            className="emotion-1"
          >
            Job Name
          </th>
          <th
            className="emotion-1"
          >
            Created By
          </th>
          <th
            className="emotion-1"
          >
            Priority
          </th>
          <th
            className="emotion-1"
          >
            Created
          </th>
          <th
            className="emotion-1"
          >
            # Assets
          </th>
          <th
            className="emotion-1"
          >
            Errors
          </th>
          <th
            className="emotion-1"
          >
            Task Progress
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-11"
        >
          <td
            colSpan={8}
          >
            <div
              className="emotion-10"
            >
              <div
                className="emotion-9"
              >
                <svg
                  color="#c92300"
                  data-file-name="noJobs.svg"
                  width={40}
                />
                <div>
                  There are currently no jobs in the queue.
                </div>
                <div>
                  Any new job will appear here.
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
  </div>
</div>
`;
